--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,35 @@
 .navbar-nav {
   margin-right: 20%;
 }
+
+.footer {
+  display: flex;
+  height: 20vh;
+  background-color: #00afab;
+  text-align: end;
+}
+
+.footer-content {
+  flex-basis: 1;
+  margin: auto;
+}
+
+.footer-logo {
+  height: 63px;
+  width: 150px;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.footer-info {
+  color: white;
+  margin-top: 5px;
+}
+
+.address {
+  margin-top: 30px;
+  color: black;
+  font-size: smaller;
+}
+
+/*150x63*/
