--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
 
 * {
-  font-family: Raleway, Sans-serif !important;;
+  font-family: Raleway, Sans-serif !important;
+  ;
 }
 
 .navbar {
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
 }
 
 .logo {
@@ -48,4 +49,54 @@
   font-size: smaller;
 }
 
-/*150x63*/
+.home, .serve, .solutions {
+  display: flex;
+  flex-direction: column;
+  padding-top: 70px;
+}
+
+.serve, .solutions {
+  background-color: #324458;
+  color: white;
+}
+
+.solutions {
+  padding-bottom: 5vh;
+}
+
+.home-img {
+  width: 99vw;
+}
+
+.who-we-are {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  display: flex;
+}
+
+.who-we-are div {
+  margin-left: 10px;
+}
+
+p,
+h3,
+h2 {
+  width: 50vw;
+  margin: auto;
+  padding: 10px;
+}
+
+.home-2 {
+  background-color: #d9e1e2;
+}
+
+.learn-more {
+  background-color: #00afab;
+  color: white;
+  height: 56px;
+  width: 200px;
+  display: block;
+  text-align: center;
+  padding-top: 15px;
+  margin: auto;
+}
